[SC-11673] added right alignment to fee column, added padding-right to some columns headers, added width to order amount columnt to avoid ... in column header name

--- a/src/app/crm/orders/orders.component.less
+++ b/src/app/crm/orders/orders.component.less
@@ -3,8 +3,11 @@
     height: 100%;
 
     ::ng-deep dx-data-grid {
-        .dx-datagrid-headers .dx-row.dx-header-row td.amount-cell {
+        .dx-datagrid-headers .dx-row.dx-header-row td.padding-right {
             padding-right: 32px;
+            &:last-child {
+                padding-right: 45px !important;
+            }
         }
         .dx-datagrid-rowsview .dx-row {
             cursor: pointer;
